[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opendma-api"
version = "0.8"
description = "Python API for OpenDMA"
readme = "README.md"
license = {text = "Apache License (2.0)"}
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
requires-python = ">=3.9"

[tool.setuptools]
packages = ["opendma.api"]

[tool.setuptools.package-data]
"opendma.api" = ["*"]
